Minor fixes here and there
- Fixed the VSCode workspace file

--- a/debugio/webpage/styles/index.css
+++ b/debugio/webpage/styles/index.css
@@ -14,8 +14,8 @@ h1 {
 	padding: 8px;
 	margin: 0 2%;
 	width: 96%;
-	height: 400px;
-	overflow: scroll;
+	height: 600px;
+	overflow: auto;
 }
 
 #consoleInput {
